fixed syntax color for dark mode

--- a/src/less/github.css
+++ b/src/less/github.css
@@ -22,7 +22,7 @@
 .hljs-subst,
 .hljs-request,
 .hljs-status {
-  color: #333;
+  color: #0086b3;
   font-weight: bold;
 }
 
